feat: Propagate GQL error codes as SQL state.
This change propagates all GQL error codes coming from the Neo4j server as SQL state codes. In addition, all exceptions raised from the Neo4j-JDBC driver itself will at least carry`50N00` or `50N42` as SQL state indicating something unexpected has happened, or an appropriate GQL code.